--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,77 +1,20 @@
 
-@import "media";
 @import "modal";
+@import "form";
+@import "media";
 
-.container{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-}
 
-.form {
-    margin: 0 auto;
-    background-image: url(../img/top-background.png);
-    height: 100%;
-    padding-top: 100px;
-}
 
-form {
-    width: 500px;
-    height: 20px;
-    margin: 0 auto;
-}
 
-.wrapper {
-    display: flex;
-    height: 43px;
-    &_inp {
-        display: flex;
-        transform: skewX(-45deg);
-        background-color: rgba(248, 244, 244, 0.8);
-        border: white;
-        padding-left: 25px;
-        padding-right: 25px;
-        min-height: 41px;
-        min-width: 300px;
-        flex-direction: column;
-    }
-    .error {
-        border: 1px solid red;
-        text-align: center;
-        transform: skewX(45deg); 
-    }
-    label.error {
-        border: none;
-        text-align: center;
-        margin-top: 15px;
-        color: red;
-        transform: skewX(45deg); 
-    }
-}
 
-input {
-    transform: skewX(45deg);
-    background-color: rgba(248, 244, 244, 0);
-    border: white;
-    padding-left: 15px;
-    min-height: 41px;
-    // width: 279px;
-    // &::placeholder{
-    //     transform: skewX(45deg); 
-    }
-    // &::text{
-    //     transform: skewX(45deg);
-    // }
-// }
 
-button {
-    transform: skewX(-45deg);
-    border: 1px solid white;
-    background-color: red;
-    min-width: 140px;
-}
 
-.button_text {
-    transform: skewX(45deg);
-    color: white; 
-}
+
+
+
+
+    
+
+
+
+
